[gd_scene load_steps=2 format=3 uid="uid://158eh4ewy387"]

[ext_resource type="Script" path="res://scenes/components/hitbox_component/hitbox_component.gd" id="1_i5g1i"]

[node name="HitboxComponent" type="Area2D"]
script = ExtResource("1_i5g1i")

[node name="DamageCDTimer" type="Timer" parent="."]
wait_time = 0.001

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="DamageCDTimer" to="." method="_on_damage_cd_timer_timeout"]
